--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -5,6 +5,7 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 * {
@@ -19,6 +20,7 @@ wall {
     height: 71px;
     background-repeat: repeat-x;
     background-image: url(../images/wall.png);
+    z-index: 2;
 }
 
 disk {
@@ -27,6 +29,7 @@ disk {
     width:75px;
     height:75px;
     background-image: url(../images/disk.gif);
+    z-index: 1;
 }
 
 sheep {
@@ -35,6 +38,7 @@ sheep {
     width:86px;
     height:75px;
     background-image: url(../images/sheep.gif);
+    z-index: 1;
 }
 
 bird-right {
@@ -43,6 +47,7 @@ bird-right {
     width:150px;
     height:103px;
     background-image: url(../images/birdright.gif);
+    z-index: 3;
 }
 
 bird-left {
@@ -51,6 +56,16 @@ bird-left {
     width:150px;
     height:103px;
     background-image: url(../images/birdleft.gif);
+    z-index: 3;
+}
+
+ufo {
+    position: absolute;
+    display:block;
+    width:125px;
+    height:76px;
+    background-image: url(../images/ufo.png);
+    z-index: 3;
 }
 
 hit {
@@ -70,4 +85,18 @@ score {
     font-size: 2em;
     line-height: 1.2em;
     color:black;
+    z-index: 4;
+}
+
+lives {
+    margin:10px 10px 10px 10px;
+    width:100%; height:100px;
+    position: absolute;
+    right:0px;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 2em;
+    line-height: 1.2em;
+    color:black;
+    text-align: right;
+    z-index: 4;
 }
