--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,15 +1,40 @@
-body, html {
-    margin:0; padding:0;
-    width:100%; height:100%;
+html {
+    height: 100%;
+}
+
+body {
     background-image: url(../images/background.png);
+    font-family: 'Press Start 2P', cursive;
     background-repeat: no-repeat;
     background-size: cover;
     overflow-x: hidden;
     overflow-y: hidden;
+    margin:0; 
+    padding:0;
 }
 
-* {
-    box-sizing: border-box;
+start {
+    font-size:3em;
+    cursor: pointer;
+    margin: auto;
+    position: absolute;
+    text-align: center;
+    height: 50px;
+    width: 250px;
+    margin-top:calc(50vh - 25px);
+    margin-left:calc(50vw - 125px);
+}
+
+retry {
+    font-size:3em;
+    cursor: pointer;
+    margin: auto;
+    position: absolute;
+    text-align: center;
+    height: 50px;
+    width: 250px;
+    margin-top:calc(50vh - 25px);
+    margin-left:calc(50vw - 125px);
 }
 
 wall {
@@ -32,12 +57,12 @@ disk {
     z-index: 1;
 }
 
-sheep {
+disk2x {
     position: absolute;
     display:block;
-    width:86px;
-    height:75px;
-    background-image: url(../images/sheep.gif);
+    width:85px;
+    height:85px;
+    background-image: url(../images/disk2x.gif);
     z-index: 1;
 }
 
@@ -81,7 +106,6 @@ score {
     width:100%; height:100px;
     position: absolute;
     left:0px;
-    font-family: 'Press Start 2P', cursive;
     font-size: 2em;
     line-height: 1.2em;
     color:black;
@@ -89,11 +113,10 @@ score {
 }
 
 lives {
-    margin:10px 10px 10px 10px;
+    margin:10px;
     width:100%; height:100px;
     position: absolute;
     right:0px;
-    font-family: 'Press Start 2P', cursive;
     font-size: 2em;
     line-height: 1.2em;
     color:black;
